test/functions/iterators/diten/typeIterator.good
typeIterator.chpl:1: error: iterators may not yield or return types
